# bearjpeg

./: .gitignore  CMakeLists.txt
include/: args.hpp
src/: args.cpp  main.cpp
